--- a/Boilerplate/src/sass/modules/_home-hero.scss
+++ b/Boilerplate/src/sass/modules/_home-hero.scss
@@ -11,14 +11,21 @@
 
     &.text-light {
         @include shadow--light();
+
+        // Use specificity to override header colour.
+        h1, h2, p {
+            color: $white;
+        }
     }
 
-    h1 {
-        @include font-size($h1--xlarge);
-        margin: $pad--thin 0 $pad--xxlarge;
+    h2 {
+         margin: $pad--thin 0 $pad--xxlarge;
     }
 
-    h4 {
-        margin-bottom: 0;
+    // Reduce the padding for smaller devices.
+    @include mq($until: tablet) {
+        h2 {
+             margin: $pad--thin 0 $pad--large;
+        }
     }
 }
